substrate/frame/support/test/tests/construct_runtime_ui/invalid_token_after_name.stderr
error: expected `:`
  --> tests/construct_runtime_ui/invalid_token_after_name.rs:23:10
   |
23 |         system ?
   |                ^
